--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     Nature offers us peace, balance, and beauty. From lush green forests to calm blue oceans,
     it reminds us of the harmony in the world. Protecting nature means protecting life itself.
   </p>
+      <img scr="diagram(flow).drawio.png">
 
 </body>
 </html>
